Fix class name for dark mode styles

--- a/public/style.css
+++ b/public/style.css
@@ -751,11 +751,11 @@ body.dark-mode  {
 }
 
 
-body .darkmode h1,
-body .darkmode h2,
-body .darkmode h3,
-body .darkmode h4,
-body .darkmode h5{
+body .dark-mode h1,
+body .dark-mode h2,
+body .dark-mode h3,
+body .dark-mode h4,
+body .dark-mode h5{
     color: var(--white);
 }
 
